--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,21 +7,21 @@ android-gradle-plugin = "8.2.2"
 android-minSdk = "26"
 # @keep
 android-targetSdk = "34"
-androidx-activity-compose = "1.8.2"
-androidx-appcompat-appcompat = "1.6.1"
+androidx-activity-compose = "1.9.3"
+androidx-appcompat-appcompat = "1.7.0"
 androidx-biometric = "1.2.0-alpha05"
-androidx-core-ktx = "1.12.0"
+androidx-core-ktx = "1.13.1"
 # @pin
-androidx-crypto = "1.1.0-alpha05"
-barcodeScanning = "17.2.0"
+androidx-crypto = "1.1.0-alpha06"
+barcodeScanning = "17.3.0"
 buffer = "1.3.6"
 compose = "1.6.0-rc02"
 compose-extensions = "1.6.0-rc02.0"
-decompose = "3.0.0-alpha08"
+decompose = "3.0.0"
 encoding = "2.0.0"
-essenty = "2.0.0-alpha07"
+essenty = "2.1.0"
 gradle-versions = "0.51.0"
-kermit = "2.0.0-RC5"
+kermit = "2.0.4"
 koin = "3.5.0"
 koin-compose = "1.1.0"
 # @pin
@@ -29,14 +29,14 @@ kotlin = "1.9.22"
 kotlincrypto-hash = "0.3.0"
 kotlincrypto-macs = "0.3.0"
 kotlincrypto-secure-random = "0.1.0"
-kotlinx-coroutines = "1.8.0"
-kotlinx-datetime = "0.5.0"
-kotlinx-serialization = "1.6.2"
-ktor = "2.3.8"
+kotlinx-coroutines = "1.9.0"
+kotlinx-datetime = "0.6.0"
+kotlinx-serialization = "1.7.2"
+ktor = "2.3.12"
 moko-resources = "0.23.0"
 multiplatform-settings = "1.1.1"
 uri-kmp = "0.0.15"
-uuid = "0.8.2"
+uuid = "0.8.4"
 version-catalog-update = "0.8.4"
 # @keep
 versionCode = "22"
