--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,38 +1,32 @@
 [versions]
-# @keep
-android-compileSdk = "34"
-# @pin
-android-gradle-plugin = "8.2.2"
-# @keep
+android-gradle-plugin = "8.10.0"
 android-minSdk = "26"
-# @keep
-android-targetSdk = "34"
-androidx-activity-compose = "1.9.3"
+android-targetSdk = "36"
+java = "21"
+androidx-activity-compose = "1.10.1"
 androidx-appcompat-appcompat = "1.7.0"
 androidx-biometric = "1.2.0-alpha05"
-androidx-core-ktx = "1.13.1"
-# @pin
-androidx-crypto = "1.1.0-alpha06"
+androidx-core-ktx = "1.16.0"
+androidx-crypto = "1.1.0-alpha07"
 barcodeScanning = "17.3.0"
 buffer = "1.3.6"
-compose = "1.6.0-rc02"
+compose = "1.8.1"
 compose-extensions = "1.6.0-rc02.0"
 decompose = "3.0.0"
 encoding = "2.0.0"
 essenty = "2.1.0"
 gradle-versions = "0.51.0"
 kermit = "2.0.4"
-koin = "3.5.0"
+koin = "4.0.0"
 koin-compose = "1.1.0"
-# @pin
-kotlin = "1.9.22"
+kotlin = "2.1.21"
 kotlincrypto-hash = "0.3.0"
 kotlincrypto-macs = "0.3.0"
 kotlincrypto-secure-random = "0.1.0"
-kotlinx-coroutines = "1.9.0"
-kotlinx-datetime = "0.6.0"
-kotlinx-serialization = "1.6.2"
-ktor = "2.3.12"
+kotlinx-coroutines = "1.10.2"
+kotlinx-datetime = "0.6.2"
+kotlinx-serialization = "1.8.1"
+ktor = "3.1.3"
 moko-resources = "0.23.0"
 multiplatform-settings = "1.1.1"
 uri-kmp = "0.0.15"
@@ -92,6 +86,7 @@ zxing-javase = { module = "com.google.zxing:javase", version.ref = "zxing-core" 
 android-application = { id = "com.android.application", version.ref = "android-gradle-plugin" }
 android-library = { id = "com.android.library", version.ref = "android-gradle-plugin" }
 compose-multiplatform = { id = "org.jetbrains.compose", version.ref = "compose" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 gradle-versions = { id = "com.github.ben-manes.versions", version.ref = "gradle-versions" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
