--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,8 +10,8 @@ androidx-core-ktx = "1.16.0"
 androidx-crypto = "1.1.0-alpha07"
 barcodeScanning = "17.3.0"
 buffer = "1.3.6"
-compose = "1.8.1"
-compose-extensions = "1.6.0-rc02.0"
+compose = "1.6.10" #TODO Cannot update because compose-extensions
+compose-extensions = "1.6.10.1"
 decompose = "3.0.0"
 encoding = "2.0.0"
 essenty = "2.1.0"
@@ -27,7 +27,7 @@ kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.6.2"
 kotlinx-serialization = "1.8.1"
 ktor = "3.1.3"
-moko-resources = "0.23.0"
+moko-resources = "0.24.5"
 multiplatform-settings = "1.1.1"
 uri-kmp = "0.0.15"
 uuid = "0.8.4"
